@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2792 2004/04/16 04:41:31 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2793 2004/04/16 16:40:14 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-04-17 16:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/common/hbver.c
+    ! show full MSVC version
+    ! show full MinGW32 version
+    ! show correct version of OpenWatcom
 
 2004-04-16 13:40 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
   * source/rtl/teditor.prg
